experimental implementation of listing recommendations based on row similarity (needs cleanup)
