# server/controllers/recommendations_controller.py
@@ -3,15 +3,20 @@ import six
 
 from server.models.listing import Listing  # noqa: E501
 from server import util
+from server.models.listings_filter import ListingsFilter
+from server.repositories.recommendations_repository import RecommendationsRepository as Recommendations_Repository
 
 
-def recommend_listings(listing_name=None, host_name=None, location=None, area=None, price_min=None, price_max=None, min_nights=None, availability=None, listings_per_host=None, room_type=None):  # noqa: E501
+def recommend_listings(listing_id=None, host_id=None, listing_name=None, host_name=None, location=None, area=None, price_min=None, price_max=None, min_nights=None, availability=None, listings_per_host=None, room_type=None):  # noqa: E501
     """Recommend AirBnBs based on provided filter criteria
 
-    Returns a list of recommended Listings # noqa: E501
-
+    Returns a list of recommended Listings
+    :param listing_id: target Listing ID
+    :type listing_id: int
+    :param host_id: host ID
+    :type host_id: int
     :param listing_name: Name to match Listings (can bei either exact match or not)
-    :type listing_name: int
+    :type listing_name: str
     :param host_name: Name to match Hosts of Listings (can bei either exact match or not)
     :type host_name: str
     :param location: Filter Listings by their location
@@ -33,7 +38,21 @@ def recommend_listings(listing_name=None, host_name=None, location=None, area=No
 
     :rtype: List[Listing]
     """
-    return 'do some magic!'
+    # provided filter options
+    request_filter = ListingsFilter(
+        listing_name,
+        host_id,
+        host_name,
+        location,
+        area,
+        price_min,
+        price_max,
+        min_nights,
+        availability,
+        listings_per_host,
+        room_type
+    )
+    return Recommendations_Repository().recommend_listing(listing_id, request_filter)
 
 
 def recommend_listings_for_attractions():  # noqa: E501
